--- a/9_19_Portfolio_Analysis.ipynb
+++ b/9_19_Portfolio_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "9e2391d7",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "2d872ccb",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "2a02b104",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "d040f9a5",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "72e7b36f",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
     "# 4-6.Calculate beta\n",
     "returns = annual_data['Adj Close'].pct_change().dropna()\n",
     "for etf in etfs:\n",
-    "    table[f'Beta against {etf}'] = [calculate_beta(stock, etf, returns) for stock in tickers]\n",
+    "    part_one[f'Beta against {etf}'] = [calculate_beta(stock, etf, returns) for stock in tickers]\n",
     "\n",
     "# 7-8.Calculate average and maximum weekly drawdown\n",
     "highs = annual_data['High'][tickers].pct_change().dropna()\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "ed1677bf",
    "metadata": {},
    "outputs": [
@@ -212,6 +212,9 @@
        "      <th></th>\n",
        "      <th>Weight</th>\n",
        "      <th>Annualized Volatility</th>\n",
+       "      <th>Beta against SPY</th>\n",
+       "      <th>Beta against IWM</th>\n",
+       "      <th>Beta against DIA</th>\n",
        "      <th>Average Weekly Drawdown</th>\n",
        "      <th>Maximum Weekly Drawdown</th>\n",
        "      <th>Total Return</th>\n",
@@ -221,92 +224,122 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>NVDA</th>\n",
-       "      <td>34.51%</td>\n",
-       "      <td>20.14%</td>\n",
-       "      <td>-0.13</td>\n",
+       "      <td>36.33%</td>\n",
+       "      <td>19.82%</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>0.34</td>\n",
        "      <td>-128.46</td>\n",
-       "      <td>11884.29%</td>\n",
-       "      <td>61.38%</td>\n",
+       "      <td>12310.87%</td>\n",
+       "      <td>61.95%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NFLX</th>\n",
-       "      <td>31.42%</td>\n",
-       "      <td>17.81%</td>\n",
-       "      <td>2.81</td>\n",
+       "      <td>30.85%</td>\n",
+       "      <td>17.32%</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>2.41</td>\n",
        "      <td>-176.71</td>\n",
-       "      <td>755.88%</td>\n",
-       "      <td>23.95%</td>\n",
+       "      <td>727.52%</td>\n",
+       "      <td>23.53%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GME</th>\n",
-       "      <td>1.39%</td>\n",
-       "      <td>21.29%</td>\n",
-       "      <td>29.67</td>\n",
+       "      <td>1.25%</td>\n",
+       "      <td>21.53%</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>63.71</td>\n",
        "      <td>-142.06</td>\n",
-       "      <td>89.43%</td>\n",
-       "      <td>6.6%</td>\n",
+       "      <td>72.51%</td>\n",
+       "      <td>5.6%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BB</th>\n",
-       "      <td>0.41%</td>\n",
-       "      <td>35.34%</td>\n",
-       "      <td>-7.75</td>\n",
+       "      <td>0.36%</td>\n",
+       "      <td>34.18%</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>-42.44</td>\n",
        "      <td>-207.67</td>\n",
-       "      <td>-36.79%</td>\n",
-       "      <td>-4.48%</td>\n",
+       "      <td>-43.08%</td>\n",
+       "      <td>-5.48%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NOK</th>\n",
-       "      <td>0.32%</td>\n",
-       "      <td>12.79%</td>\n",
-       "      <td>-21.66</td>\n",
+       "      <td>0.3%</td>\n",
+       "      <td>12.53%</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>-10.33</td>\n",
        "      <td>-319.96</td>\n",
-       "      <td>-20.11%</td>\n",
-       "      <td>-2.22%</td>\n",
+       "      <td>-26.79%</td>\n",
+       "      <td>-3.07%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AMZN</th>\n",
-       "      <td>10.87%</td>\n",
-       "      <td>15.51%</td>\n",
-       "      <td>1.07</td>\n",
+       "      <td>10.5%</td>\n",
+       "      <td>16.09%</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>6.12</td>\n",
        "      <td>-203.87</td>\n",
-       "      <td>783.17%</td>\n",
-       "      <td>24.34%</td>\n",
+       "      <td>722.6%</td>\n",
+       "      <td>23.46%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TSLA</th>\n",
-       "      <td>21.09%</td>\n",
-       "      <td>26.8%</td>\n",
-       "      <td>-602.20</td>\n",
+       "      <td>20.41%</td>\n",
+       "      <td>24.56%</td>\n",
+       "      <td>1.89</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>27.15</td>\n",
        "      <td>-205.75</td>\n",
-       "      <td>2121.61%</td>\n",
-       "      <td>36.35%</td>\n",
+       "      <td>2077.6%</td>\n",
+       "      <td>36.08%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Weight Annualized Volatility  Average Weekly Drawdown  \\\n",
-       "NVDA  34.51%                20.14%                    -0.13   \n",
-       "NFLX  31.42%                17.81%                     2.81   \n",
-       "GME    1.39%                21.29%                    29.67   \n",
-       "BB     0.41%                35.34%                    -7.75   \n",
-       "NOK    0.32%                12.79%                   -21.66   \n",
-       "AMZN  10.87%                15.51%                     1.07   \n",
-       "TSLA  21.09%                 26.8%                  -602.20   \n",
+       "      Weight Annualized Volatility Beta against SPY Beta against IWM  \\\n",
+       "NVDA  36.33%                19.82%             2.15              1.3   \n",
+       "NFLX  30.85%                17.32%             1.43             0.94   \n",
+       "GME    1.25%                21.53%             1.63             1.44   \n",
+       "BB     0.36%                34.18%              1.6             1.22   \n",
+       "NOK     0.3%                12.53%             1.11             0.82   \n",
+       "AMZN   10.5%                16.09%             1.54             0.99   \n",
+       "TSLA  20.41%                24.56%             1.89             1.36   \n",
        "\n",
-       "      Maximum Weekly Drawdown Total Return Annualized Total Return  \n",
-       "NVDA                  -128.46    11884.29%                  61.38%  \n",
-       "NFLX                  -176.71      755.88%                  23.95%  \n",
-       "GME                   -142.06       89.43%                    6.6%  \n",
-       "BB                    -207.67      -36.79%                  -4.48%  \n",
-       "NOK                   -319.96      -20.11%                  -2.22%  \n",
-       "AMZN                  -203.87      783.17%                  24.34%  \n",
-       "TSLA                  -205.75     2121.61%                  36.35%  "
+       "     Beta against DIA  Average Weekly Drawdown  Maximum Weekly Drawdown  \\\n",
+       "NVDA             1.88                     0.34                  -128.46   \n",
+       "NFLX             1.39                     2.41                  -176.71   \n",
+       "GME              1.67                    63.71                  -142.06   \n",
+       "BB               1.56                   -42.44                  -207.67   \n",
+       "NOK              1.23                   -10.33                  -319.96   \n",
+       "AMZN             1.34                     6.12                  -203.87   \n",
+       "TSLA             1.59                    27.15                  -205.75   \n",
+       "\n",
+       "     Total Return Annualized Total Return  \n",
+       "NVDA    12310.87%                  61.95%  \n",
+       "NFLX      727.52%                  23.53%  \n",
+       "GME        72.51%                    5.6%  \n",
+       "BB        -43.08%                  -5.48%  \n",
+       "NOK       -26.79%                  -3.07%  \n",
+       "AMZN       722.6%                  23.46%  \n",
+       "TSLA      2077.6%                  36.08%  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bb40db0e",
    "metadata": {},
    "outputs": [],
@@ -336,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "6572496e",
    "metadata": {},
    "outputs": [],
@@ -403,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "88a6f381",
    "metadata": {},
    "outputs": [],
@@ -439,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "101615df",
    "metadata": {},
    "outputs": [
@@ -476,25 +509,25 @@
        "      <th>SPY</th>\n",
        "      <td>0.79</td>\n",
        "      <td>0.13</td>\n",
-       "      <td>629619.21</td>\n",
-       "      <td>4.97</td>\n",
-       "      <td>228.71</td>\n",
+       "      <td>1996595.56</td>\n",
+       "      <td>5.78</td>\n",
+       "      <td>224.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IWM</th>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>629619.21</td>\n",
-       "      <td>4.65</td>\n",
-       "      <td>224.08</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>1996595.56</td>\n",
+       "      <td>5.44</td>\n",
+       "      <td>220.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DIA</th>\n",
        "      <td>0.62</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>629619.21</td>\n",
-       "      <td>4.99</td>\n",
-       "      <td>231.30</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1996595.56</td>\n",
+       "      <td>5.81</td>\n",
+       "      <td>227.45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -502,17 +535,17 @@
       ],
       "text/plain": [
        "     Correlation against ETF  Covariance against ETF  Tracking Errors  \\\n",
-       "SPY                     0.79                    0.13        629619.21   \n",
-       "IWM                     0.72                    0.16        629619.21   \n",
-       "DIA                     0.62                    0.09        629619.21   \n",
+       "SPY                     0.79                    0.13       1996595.56   \n",
+       "IWM                     0.71                    0.15       1996595.56   \n",
+       "DIA                     0.62                    0.08       1996595.56   \n",
        "\n",
        "     Sharpe Ratio  Annualized Volatility Spread  \n",
-       "SPY          4.97                        228.71  \n",
-       "IWM          4.65                        224.08  \n",
-       "DIA          4.99                        231.30  "
+       "SPY          5.78                        224.75  \n",
+       "IWM          5.44                        220.22  \n",
+       "DIA          5.81                        227.45  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
