--- a/Portfolio_Analysis.ipynb
+++ b/Portfolio_Analysis.ipynb
@@ -10,18 +10,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f44f7a98",
+   "metadata": {},
+   "source": [
+    "### Import Packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "9e2391d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import packages\n",
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "import math\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eacee547",
+   "metadata": {},
+   "source": [
+    "### Tickers + ETFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f41952d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tickers\n",
+    "tickers = [\"NVDA\", \"NFLX\", \"GME\", \"BB\", \"NOK\", \"AMZN\", \"TSLA\"]\n",
+    "etfs = [\"SPY\", \"IWM\", \"DIA\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8a216a5",
+   "metadata": {},
+   "source": [
+    "### Declaring Function to Download/Import Data"
    ]
   },
   {
@@ -41,11 +76,6 @@
     }
    ],
    "source": [
-    "# Tickers\n",
-    "tickers = [\"NVDA\", \"NFLX\", \"GME\", \"BB\", \"NOK\", \"AMZN\", \"TSLA\"]\n",
-    "etfs = [\"SPY\", \"IWM\", \"DIA\"]\n",
-    "\n",
-    "\n",
     "class DataDownloader:\n",
     "    \"\"\"\n",
     "    DataDownloader is a class designed to fetch historical stock and ETF data.\n",
@@ -83,6 +113,7 @@
     "The historical data for the tickers and ETFs is then fetched for the three time periods and stored in \n",
     "`quarterly_data`, `annual_data`, and `decade_data`.\n",
     "\"\"\"\n",
+    "\n",
     "downloader = DataDownloader(tickers, etfs)\n",
     "# Usage Guide:\n",
     "quarterly_data = downloader.quarterly()\n",
@@ -92,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "2a02b104",
+   "execution_count": null,
+   "id": "0528c99e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +166,8 @@
    "id": "9b964503",
    "metadata": {},
    "source": [
-    "## Creating columns"
+    "# Part 1\n",
+    "Create a table showing constituent (stocks) risk analysis in the equal-weight portfolio analysis as of the current date."
    ]
   },
   {
@@ -145,40 +177,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1.Create table\n",
-    "part_one = pd.DataFrame(index=tickers)\n",
+    "# Column 1 – Ticker\n",
+    "table1 = pd.DataFrame(index=tickers)\n",
     "\n",
-    "# 2.Calculate weights\n",
+    "# Column 2 – Portfolio Weight (equally weighted)\n",
     "# calc_weight = calculate_weights(quarterly_data['Adj Close'][tickers].iloc[-1])\n",
     "# weight = calc_weight.round(2).astype(str) + \"%\"\n",
-    "# part_one['Weight'] = weight\n",
+    "# table1['Weight'] = weight\n",
     "n = len(tickers)\n",
     "weight = 1/n\n",
-    "part_one['Portfolio Weight'] = weight\n",
+    "table1['Portfolio Weight'] = weight\n",
     "\n",
-    "# 3.Calculate annualized volatility\n",
+    "# Column 3 – Annualized Volatility (using trailing 3-months)\n",
     "calc_vol = calculate_annualized_volatility(quarterly_data['Adj Close'][tickers])\n",
     "volatility = calc_vol.round(2).astype(str) + \"%\"\n",
-    "part_one['Annualized Volatility'] = volatility\n",
-    "                                           \n",
-    "# 4-6.Calculate beta\n",
+    "table1['Annualized Volatility'] = volatility\n",
+    "\n",
+    "# Column 4 – Beta against SPY (using trailing 12-months)\n",
+    "# Column 5 – Beta against IWM (using trailing 12-months)\n",
+    "# Column 6 – Beta against DIA (using trailing 12-months\n",
     "returns = annual_data['Adj Close'].pct_change().dropna()\n",
     "for etf in etfs:\n",
-    "    part_one[f'Beta against {etf}'] = [calculate_beta(stock, etf, returns) for stock in tickers]\n",
+    "    table1[f'Beta against {etf}'] = [calculate_beta(stock, etf, returns) for stock in tickers]\n",
+    "\n",
+    "# Column 7 – Average Weekly Drawdown (52-week Low minus 52-week High) / 52-week High\n",
+    "# Column 8 – Maximum Weekly Drawdown (52-week Low minus 52-week High) / 52-week High\n",
     "\n",
     "# 7-8.Calculate average and maximum weekly drawdown\n",
     "highs = annual_data['High'][tickers].pct_change().dropna()\n",
     "lows = annual_data['Low'][tickers].pct_change().dropna()\n",
-    "part_one['Average Weekly Drawdown'] = (((lows.mean() - highs.mean()) / highs.mean()) * 100).round(2)\n",
-    "part_one['Maximum Weekly Drawdown'] = (((lows.min() - highs.max()) / highs.max()) * 100).round(2)\n",
+    "table1['Average Weekly Drawdown'] = (((lows.mean() - highs.mean()) / highs.mean()) * 100).round(2)\n",
+    "table1['Maximum Weekly Drawdown'] = (((lows.min() - highs.max()) / highs.max()) * 100).round(2)\n",
     "\n",
-    "# 9-10.Calculate total return and annualized total return\n",
+    "# Column 9 – Total Return (using trailing 10-years)\n",
+    "# Column 10 – Annualized Total Return (using trailing 10-years)\n",
     "initial_values = decade_data['Adj Close'][tickers].dropna().iloc[0]\n",
     "current_values = decade_data['Adj Close'][tickers].iloc[-1]\n",
-    "part_one['Total Return'] = (((current_values - initial_values) / initial_values) * 100).round(2).astype(str) + \"%\"\n",
-    "part_one['Annualized Total Return'] = ((((current_values / initial_values) ** (1/10)) - 1) * 100).round(2).astype(str) + \"%\"\n",
-    "\n",
-    "\n"
+    "table1['Total Return'] = (((current_values - initial_values) / initial_values) * 100).round(2).astype(str) + \"%\"\n",
+    "table1['Annualized Total Return'] = ((((current_values / initial_values) ** (1/10)) - 1) * 100).round(2).astype(str) + \"%\""
    ]
   },
   {
@@ -186,7 +222,7 @@
    "id": "b62a87c1",
    "metadata": {},
    "source": [
-    "# Part One Complete"
+    "## Part One Results"
    ]
   },
   {
@@ -351,26 +387,16 @@
     }
    ],
    "source": [
-    "part_one"
+    "table1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "bb40db0e",
+   "cell_type": "markdown",
+   "id": "0c4654c7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\"\"\"\n",
-    "This code computes the daily percentage change for the adjusted close prices, \n",
-    "removes any missing values, and calculates the daily total value of the portfolio.\n",
-    "\"\"\"\n",
-    "\n",
-    "# Calculate the percentage change for the adjusted close and drop NaN values.\n",
-    "annual_data_complete = annual_data['Adj Close'].pct_change().dropna()\n",
-    "annual_data_complete['portfolio'] = annual_data_complete[tickers].sum(axis=1)\n",
-    "\n"
+    "# Part 2\n",
+    "Create a table showing Portfolio Risk against the three ETFs"
    ]
   },
   {
@@ -380,6 +406,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "This code computes the daily percentage change for the adjusted close prices, \n",
+    "removes any missing values, and calculates the daily total value of the portfolio.\n",
+    "\"\"\"\n",
+    "\n",
+    "# Calculate the percentage change for the adjusted close and drop NaN values.\n",
+    "annual_data_complete = annual_data['Adj Close'].pct_change().dropna()\n",
+    "annual_data_complete['portfolio'] = annual_data_complete[tickers].sum(axis=1)\n",
     "\n",
     "\"\"\"\n",
     "This code block defines functions to calculate various financial metrics:\n",
@@ -393,15 +427,15 @@
     "calculating percentage changes and computing the portfolio's total value for each day.\n",
     "\"\"\"\n",
     "\n",
-    "# 1\n",
+    "# Column 2 – Correlation against ETF\n",
     "def calculate_portfolio_correlation(data, etfs, portfolio):\n",
     "    return [round(data[etf].corr(data[portfolio]), 2) for etf in etfs]\n",
     "\n",
-    "# 2\n",
+    "# Column 3 – Covariance of Portfolio against ETF\n",
     "def calculate_portfolio_covariance(data, etfs, portfolio):\n",
     "    return [round(data[[etf, portfolio]].cov().loc[etf, portfolio] * 100, 2) for etf in etfs]\n",
     "\n",
-    "# 3\n",
+    "# Column 4 – Tracking Errors (using trailing 10-years)\n",
     "def calculate_tracking_error(data, etfs, tickers, trading_days):\n",
     "    errors = []\n",
     "    for etf in etfs:\n",
@@ -411,7 +445,7 @@
     "        errors.append(round(te, 2))\n",
     "    return errors\n",
     "\n",
-    "# 4\n",
+    "# Column 5 – Sharpe Ratio (using current risk-free rate)\n",
     "def calculate_sharpe_ratio(data, etfs, tickers):\n",
     "    ratios = []\n",
     "    for etf in etfs:\n",
@@ -422,7 +456,7 @@
     "        ratios.append(round(ratio, 2))\n",
     "    return ratios\n",
     "\n",
-    "# 5\n",
+    "# Column 6 – Annualized Volatility (252 days) Spread (Portfolio Volatility – ETF Volatility)\n",
     "def calculate_ann_vol_spread(data, etfs, tickers, trading_days):\n",
     "    spreads = []\n",
     "    for etf in etfs:\n",
@@ -447,25 +481,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#0: Create table\n",
-    "part_two = pd.DataFrame(index=etfs)\n",
+    "# Column 1 – ETF Ticker\n",
+    "table2 = pd.DataFrame(index=etfs)\n",
     "\n",
+    "# Column 2 – Correlation against ETF\n",
+    "table2['Correlation against ETF'] = calculate_portfolio_correlation(annual_data_complete, etfs, 'portfolio')\n",
     "\n",
-    "#1-2: apply correlation & covariance\n",
-    "part_two['Correlation against ETF'] = calculate_portfolio_correlation(annual_data_complete, etfs, 'portfolio')\n",
-    "part_two['Covariance against ETF'] = calculate_portfolio_covariance(annual_data_complete, etfs, 'portfolio')\n",
+    "# Column 3 – Covariance of Portfolio against ETF\n",
+    "table2['Covariance against ETF'] = calculate_portfolio_covariance(annual_data_complete, etfs, 'portfolio')\n",
     "\n",
+    "# Column 4 – Tracking Errors (using trailing 10-years)\n",
+    "table2['Tracking Errors'] = calculate_tracking_error(decade_data.copy(), etfs, tickers, TRADING_DAYS_DECADE)\n",
     "\n",
-    "#3: apply Tracking erros\n",
-    "part_two['Tracking Errors'] = calculate_tracking_error(decade_data.copy(), etfs, tickers, TRADING_DAYS_DECADE)\n",
+    "# Column 5 – Sharpe Ratio (using current risk-free rate)\n",
+    "table2['Sharpe Ratio'] = calculate_sharpe_ratio(annual_data_complete, etfs, tickers)\n",
     "\n",
-    "\n",
-    "#4: apply Sharpe Ratio\n",
-    "part_two['Sharpe Ratio'] = calculate_sharpe_ratio(annual_data_complete, etfs, tickers)\n",
-    "\n",
-    "\n",
-    "#5: apply AVS\n",
-    "part_two['Annualized Volatility Spread'] = calculate_ann_vol_spread(annual_data_complete, etfs, tickers, TRADING_DAYS_ANNUAL)"
+    "#5: Column 6 – Annualized Volatility (252 days) Spread (Portfolio Volatility – ETF Volatility)\n",
+    "table2['Annualized Volatility Spread'] = calculate_ann_vol_spread(annual_data_complete, etfs, tickers, TRADING_DAYS_ANNUAL)"
    ]
   },
   {
@@ -473,7 +505,7 @@
    "id": "dad702cd",
    "metadata": {},
    "source": [
-    "## Part two complete"
+    "## Part Two Results"
    ]
   },
   {
@@ -557,7 +589,7 @@
     }
    ],
    "source": [
-    "part_two"
+    "table2"
    ]
   },
   {
@@ -565,7 +597,8 @@
    "id": "d5b7d42b",
    "metadata": {},
    "source": [
-    "Part 3 - Create a correlation matrix showing the correlations between the equal-weighted portfolio, 3 ETFs, and your 7 stocks."
+    "# Part 3\n",
+    "Create a correlation matrix showing the correlations between the equal-weighted portfolio, 3 ETFs, and your 7 stocks."
    ]
   },
   {
@@ -586,9 +619,10 @@
     }
    ],
    "source": [
-    "# \n",
+    "# Correlation Matrix\n",
     "corr_matrix = annual_data_complete.drop(columns='total_pct_change_tickers').corr(method=\"pearson\")\n",
     "\n",
+    "# Plot Heatmap\n",
     "sns.heatmap(corr_matrix, annot=True, cmap=\"coolwarm\")\n",
     "plt.title(\"Correlation Matrix\")\n",
     "plt.show()"
